outputs/tsp_constructive-constructive/mcts-ahd/2025-09-28_08-09-19/evaluations/problem_eval3474623525253365512_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, adaptive distance sensitivity, and a novel "path coherence" factor to balance exploration, exploitation, and destination alignment, while using a non-linear scoring mechanism that emphasizes high-potential nodes early and refines selections as the tour progresses.}
                                                                                                                                                                                                                                                                                        ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, adaptive distance sensitivity, and a novel "path coherence" factor to balance exploration, exploitation, and destination alignment, while using a non-linear scoring mechanism that emphasizes high-potential nodes early and refines selections as the tour progresses.}
                                                                                                                                                                                                                                                                                        ^
SyntaxError: unmatched '}'
